--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ build-iPhoneSimulator/
 /.bundle/
 /vendor/bundle
 /lib/bundler/man/
+.bundle/
+# since ruby packages are installed in this director under vendor.
+vendor/
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
