--- a/sdk/ruby/Gemfile
+++ b/sdk/ruby/Gemfile
@@ -2,9 +2,6 @@
 
 source "https://rubygems.org"
 
-# gem "rails"
 gem 'aws-sdk-s3'
-
-# installed gloablly by local package manager
-#gem 'pry'
-#gem 'nokogiri'
+gem 'pry'
+gem 'nokogiri'
